--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ dotenv = "0.15.0"
 env_logger = "0.11.1"
 log = "0.4.20"
 prost = "0.12.3"
+tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 tonic = "0.10.2"
 
 [build-dependencies]
