--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 dotenv = "0.15.0"
 env_logger = "0.11.1"
+libc = "0.2.153"
 log = "0.4.20"
 prost = "0.12.3"
 slab = "0.4.9"
